--- a/百度定位/map.html
+++ b/百度定位/map.html
@@ -87,7 +87,7 @@
 
 
     //设置个性的地图
-    /*var myStyleJson=[
+   var myStyleJson=[
         {
             "featureType": "road",
             "elementType": "geometry.stroke",
@@ -95,7 +95,7 @@
                 "color": "#ff0000"
             }
         }];
-    map.setMapStyle({styleJson: myStyleJson });*/
+    map.setMapStyle({styleJson: myStyleJson });
 
     /*根据城市名字获取地图*/
     /*var map = new BMap.Map("allmap");  // 创建Map实例
